# gnome-backgrounds-custom

./: AUTHORS  README.md
backgrounds/: 1.xml.in  2.xml.in  3.xml.in  4.xml.in  5.xml.in  6.xml.in  7.xml.in  8.xml.in  9.xml.in  adwaita.xml.in  meson.build
